# simple-messenger-challenge

./: CMakeLists.txt  Readme.md
include/: client.h  message.h  messenger.h  server.h  simpleMessenger.h  socketIO.h
src/: client.cpp  main.cpp  messenger.cpp  server.cpp  simpleMessenger.cpp  socketIO.cpp
test/: messengerTest.cpp
